--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redirecting to 1.0/</title>
+    <title>Redirecting to https://rascalsoftware.github.io/RAT-Docs/dev/</title>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; URL=1.0/index.html">
-    <link rel="canonical" href="1.0/index.html">
+    <meta http-equiv="refresh" content="0; URL=https://rascalsoftware.github.io/RAT-Docs/dev/index.html">
+    <link rel="canonical" href="https://rascalsoftware.github.io/RAT-Docs/dev/index.html">
   </head>
 </html>
